--- a/index-.html
+++ b/index-.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Home</title>
+   <title>_Home_</title>
    <link rel="stylesheet" href="css/style.css">
    <!-- swiper css link  -->
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -20,10 +20,10 @@
    <section class="header">
       <a href="home.html" class="logo">travel.</a>
       <nav class="navbar">
-         <a href="home.html">home</a>
-         <a href="about.html">about</a>
-         <a href="package.html">package</a>
-         <a href="book.html">book</a>
+         <a href="index.html">home</a>
+         <a href="index_.html">about</a>
+         <a href="index-.html">package</a>
+         <a href="index1.html">book</a>
       </nav>
 
       <div id="menu-btn" class="fas fa-bars"></div>
@@ -40,7 +40,7 @@
             <div class="content">
                <span>explore, discover, travel</span>
                <h3>travel around the world</h3>
-               <a href="package.html" class="btn">discover more</a>
+               <a href="index.html" class="btn">discover more</a>
             </div>
          </div>
        </div>
@@ -56,7 +56,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -67,7 +67,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -78,7 +78,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -89,7 +89,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -100,7 +100,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -111,7 +111,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -122,7 +122,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -133,7 +133,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -144,7 +144,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -155,7 +155,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -166,7 +166,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -177,7 +177,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
+            <a href="index1.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -223,10 +223,10 @@
 
        <div class="box">
           <h3>quick links</h3>
-          <a href="home.html"> <i class="fas fa-angle-right"></i> home</a>
-          <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
-          <a href="package.html"> <i class="fas fa-angle-right"></i> package</a>
-          <a href="book.html"> <i class="fas fa-angle-right"></i> book</a>
+          <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
+          <a href="index_.html"> <i class="fas fa-angle-right"></i> about</a>
+          <a href="index-.html"> <i class="fas fa-angle-right"></i> package</a>
+          <a href="index1.html"> <i class="fas fa-angle-right"></i> book</a>
        </div>
 
        <div class="box">
