--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <a href="index.html" class="logo">travel.</a>
       <nav class="navbar">
          <a href="index.html">home</a>
-         <a href="index_.html">about</a>
-         <a href="index-.html">package</a>
-         <a href="index1.html">book</a>
+         <a href="about.html">about</a>
+         <a href="package.html">package</a>
+         <a href="book.html">book</a>
       </nav>
 
       <div id="menu-btn" class="fas fa-bars"></div>
@@ -45,7 +45,7 @@
                <div class="content">
                   <span>explore, discover, travel</span>
                   <h3>travel around the world</h3>
-                  <a href="index-.html" class="btn">discover more</a>
+                  <a href="package.html" class="btn">discover more</a>
                </div>
             </div>
 
@@ -54,7 +54,7 @@
                <div class="content">
                   <span>explore, discover, travel</span>
                   <h3>discover the new places</h3>
-                  <a href="index-.html" class="btn">discover more</a>
+                  <a href="package.html" class="btn">discover more</a>
                </div>
             </div>
 
@@ -63,7 +63,7 @@
                <div class="content">
                   <span>explore, discover, travel</span>
                   <h3>make your tour worthwhile</h3>
-                  <a href="index-.html" class="btn">discover more</a>
+                  <a href="package.html" class="btn">discover more</a>
                </div>
             </div>
 
@@ -133,7 +133,7 @@
    <div class="content">
       <h3>about us</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita et, recusandae nobis fugit modi quibusdam ea assumenda, nulla quisquam repellat rem aliquid sequi maxime sapiente autem ipsum? Nobis, provident voluptate?</p>
-      <a href="index_.html" lass="btn">read more</a>
+      <a href="about.html" lass="btn">read more</a>
    </div>
 
 </section>
@@ -155,7 +155,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, sint!</p>
-            <a href="index1.html" class="btn">book now</a>
+            <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
@@ -166,7 +166,7 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, sint!</p>
-            <a href="index1.html" class="btn">book now</a>
+            <a href="book.html" class="btn">book now</a>
          </div>
       </div>
       
@@ -177,13 +177,13 @@
          <div class="content">
             <h3>adventure & tour</h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, sint!</p>
-            <a href="index1.html" class="btn">book now</a>
+            <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
    </div>
 
-   <div class="load-more"> <a href="index-.html" class="btn">load more</a> </div>
+   <div class="load-more"> <a href="package.html" class="btn">load more</a> </div>
 
 </section>
 
@@ -195,7 +195,7 @@
    <div class="content">
       <h3>upto 50% off</h3>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure tempora assumenda, debitis aliquid nesciunt maiores quas! Magni cumque quaerat saepe!</p>
-      <a href="index1.html" class="btn">book now</a>
+      <a href="book.html" class="btn">book now</a>
    </div>
 </section>
 
@@ -228,9 +228,9 @@
          <div class="box">
             <h3>quick links</h3>
             <a href="index.html"> <i class="fas fa-angle-right"></i> home</a>
-            <a href="index_.html"> <i class="fas fa-angle-right"></i> about</a>
-            <a href="index-.html"> <i class="fas fa-angle-right"></i> package</a>
-            <a href="index1.html"> <i class="fas fa-angle-right"></i> book</a>
+            <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
+            <a href="package.html"> <i class="fas fa-angle-right"></i> package</a>
+            <a href="book.html"> <i class="fas fa-angle-right"></i> book</a>
          </div>
 
          <div class="box">
