--- a/about.html
+++ b/about.html
@@ -53,8 +53,12 @@
  
     <div class="content">
        <h3>why choose us?</h3>
-       <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure numquam nulla iusto corporis dolor commodi libero, vitae obcaecati optio rerum ab culpa nesciunt, earum mollitia quasi ipsam non. Aliquid, iure.</p>
-       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid rerum, delectus voluptate aliquam quaerat iusto repellendus error nulla ab atque.</p>
+       <p>Nurtured from the seed of a single idea ‘to empower the traveller with easy & instant travel bookings providing comprehensive choices’, LST_Travel is a pioneer in India’s online travel space. Founded by Shreyansh Nishod in the year 2021, LST_Travel began its journey by serving the US-India travel market with best-value products & services, powered by robust technology and round-the-clock customer support.
+After successfully consolidating its position as a customer-first brand, known for its reliability and transparency, LST_Travel launched its India operations in 20022.
+</p>
+       <p>As low-cost Travelling carriers were introduced in India, the number of Indians opting for online travel solutions also increased rapidly. And LST_Travel answered the call of the hour, by bringing the convenience of booking hotels, and holiday packages in just a few clicks.
+Over the years, we have partnered with many leading brands from the aviation & hospitality industries, creating fruitful partner relations for business expansion opportunities.
+What makes our story even stronger is , Dedication  </p>
        <div class="icons-container">
           <div class="icons">
              <i class="fas fa-map"></i>
@@ -79,7 +83,7 @@
 
  <section class="reviews">
 
-    <h1 class="heading-title"> clients reviews </h1>
+    <h1 class="heading-title"> Coustomer Reviews </h1>
  
     <div class="swiper reviews-slider">
  
@@ -93,8 +97,8 @@
                 <i class="fas fa-star"></i>
                 <i class="fas fa-star"></i>
              </div>
-             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus facilis laudantium magnam saepe magni ullam possimus laborum voluptas, veniam ipsum officiis quae doloribus minima ut quis. Molestiae qui distinctio possimus?</p>
-             <h3>john deo</h3>
+             <p>I am back from the Unique ooty Mode. I can describe it in one line - I think I died and went to heaven and now I am back :) The whole trip was a dreamie Connection and I felt I was in a dream</p>
+             <h3>Aisha verma</h3>
              <span>traveler</span>
              <img src="images/pic1.png" alt="">
           </div>
@@ -106,8 +110,8 @@
                <i class="fas fa-star"></i>
                <i class="fas fa-star"></i>
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus facilis laudantium magnam saepe magni ullam possimus laborum voluptas, veniam ipsum officiis quae doloribus minima ut quis. Molestiae qui distinctio possimus?</p>
-            <h3>john deo</h3>
+            <p>We are back from one of the most amazing vacations (Goa). It was indeed a great experience- right from the interactions wave of sea , Where we always want go , thnks to LST Travel  </p>
+            <h3>vivek hennry</h3>
             <span>traveler</span>
             <img src="images/pic2.png" alt="">
          </div>
@@ -118,8 +122,8 @@
                <i class="fas fa-star"></i>
                <i class="fas fa-star"></i>
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus facilis laudantium magnam saepe magni ullam possimus laborum voluptas, veniam ipsum officiis quae doloribus minima ut quis. Molestiae qui distinctio possimus?</p>
-            <h3>john deo</h3>
+            <p>i'm back to my sweet home and have to admit, our Big Manali Holiday was amazing!! I would like to personally thank LST Travel for selecting the right places for us and they organizing everything nicelly</p>
+            <h3>RD.Alpana Roy</h3>
             <span>traveler</span>
             <img src="images/pic3.png" alt="">
          </div>
@@ -183,9 +187,9 @@
 
        <div class="box">
           <h3>contact info</h3>
-          <a href="#"> <i class="fas fa-phone"></i> +91 8256485937</a>
-          <a href="#"> <i class="fas fa-envelope"></i> tourGuide@gmail.com </a>
-          <a href="#"> <i class="fas fa-map"></i> indore, india - 400104 </a>
+          <a href="#"> <i class="fas fa-phone"></i> +91 9109828778</a>
+          <a href="#"> <i class="fas fa-envelope"></i> shreyanshnishod8@gmail.com </a>
+          <a href="#"> <i class="fas fa-map"></i> indore, india - 452001 </a>
        </div>
 
        <div class="box">
