--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     <div class="content">
        <h3>why choose us?</h3>
        <p>Nurtured from the seed of a single idea ‘to empower the traveller with easy & instant travel bookings providing comprehensive choices’, LST_Travel is a pioneer in India’s online travel space. Founded by Shreyansh Nishod in the year 2021, LST_Travel began its journey by serving the US-India travel market with best-value products & services, powered by robust technology and round-the-clock customer support.
-After successfully consolidating its position as a customer-first brand, known for its reliability and transparency, LST_Travel launched its India operations in 20022.
+After successfully consolidating its position as a customer-first brand, known for its reliability and transparency, LST_Travel launched its India operations in 2022.
 </p>
        <p>As low-cost Travelling carriers were introduced in India, the number of Indians opting for online travel solutions also increased rapidly. And LST_Travel answered the call of the hour, by bringing the convenience of booking hotels, and holiday packages in just a few clicks.
 Over the years, we have partnered with many leading brands from the aviation & hospitality industries, creating fruitful partner relations for business expansion opportunities.
@@ -83,7 +83,7 @@ What makes our story even stronger is , Dedication  </p>
 
  <section class="reviews">
 
-    <h1 class="heading-title"> Coustomer Reviews </h1>
+    <h1 class="heading-title"> customer Reviews </h1>
  
     <div class="swiper reviews-slider">
  
@@ -98,7 +98,7 @@ What makes our story even stronger is , Dedication  </p>
                 <i class="fas fa-star"></i>
              </div>
              <p>I am back from the Unique ooty Mode. I can describe it in one line - I think I died and went to heaven and now I am back :) The whole trip was a dreamie Connection and I felt I was in a dream</p>
-             <h3>Aisha verma</h3>
+             <h3>Aaisha verma</h3>
              <span>traveler</span>
              <img src="images/pic1.png" alt="">
           </div>
