--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Home</title>
+   <title>About</title>
    <link rel="stylesheet" href="css/style.css">
    <!-- swiper css link  -->
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo">travel.</a>
+      <a href="index.html" class="logo" style="background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fieltsonlinetests.com%2Fwriting-tips%2Fielts-writing-task-2-analysis-reasons-travelling-band-75&psig=AOvVaw3MoWqrU0mZw0jwzb44NGSe&ust=1681759721452000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCJCGq6eRr_4CFQAAAAAdAAAAABAJ');">__LST_Travel__.</a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
