--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo">travel.</a>
+      <a href="index.html" class="logo" style="background-image: url('https://www.shutterstock.com/image-photo/luxury-travel-vacation-destination-panoramic-banner-1115696396');">__LST_Travel__</a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
@@ -131,9 +131,10 @@
    </div>
 
    <div class="content">
-      <h3>about us</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita et, recusandae nobis fugit modi quibusdam ea assumenda, nulla quisquam repellat rem aliquid sequi maxime sapiente autem ipsum? Nobis, provident voluptate?</p>
-      <a href="about.html" lass="btn">read more</a>
+      <h3>About US</h3>
+      <p>Nurtured From The Seed Of A Single Idea ‘To Empower The Traveller With Easy & Instant Travel Bookings Providing Comprehensive Choices’, LST_Travel Is A Pioneer In India’s Online Travel Space. Founded By Shreyansh Nishod In The Year 2021, LST_Travel Began Its Journey By Serving The US-India Travel Market With Best-Value Products & Services, Powered By Robust Technology And Round-The-Clock Customer Support. After Successfully Consolidating Its Position As A Customer-First Brand, Known For Its Reliability And Transparency, LST_Travel Launched Its India Operations In 2022.
+As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians Opting For Online Travel Solutions Also Increased Rapidly. And LST_Travel Answered The Call Of The Hour, By Bringing The Convenience Of Booking Hotels, And Holiday Packages In Just A Few Clicks. Over The Years, We Have Partnered With Many Leading Brands From The Aviation & Hospitality Industries, Creating Fruitful Partner Relations For Business Expansion Opportunities. What Makes Our Story Even Stronger Is , Dedication</p>
+      <a>Thank you for Visit</a>
    </div>
 
 </section>
@@ -144,7 +145,7 @@
 
 <section class="home-packages">
 
-   <h1 class="heading-title"> our packages </h1>
+   <h1 class="heading-title"> Don't Think , BOOK NOW... </h1>
 
    <div class="box-container">
 
@@ -154,7 +155,7 @@
          </div>
          <div class="content">
             <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, sint!</p>
+            <p>“The biggest adventure you can take is to live the life of your dreams”</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
@@ -165,7 +166,7 @@
          </div>
          <div class="content">
             <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, sint!</p>
+            <p>“Have stories to tell not stuff to show.”</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
@@ -176,14 +177,14 @@
          </div>
          <div class="content">
             <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, sint!</p>
+            <p>“The journey of a thousand miles begins with a single step.”</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
    </div>
 
-   <div class="load-more"> <a href="package.html" class="btn">load more</a> </div>
+   <div class="load-more"> <a href="index.html" class="btn">__HOME__</a> </div>
 
 </section>
 
@@ -193,8 +194,8 @@
 
 <section class="home-offer">
    <div class="content">
-      <h3>upto 50% off</h3>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure tempora assumenda, debitis aliquid nesciunt maiores quas! Magni cumque quaerat saepe!</p>
+      <h2>upto 20% off</h2>
+      <h4>_Don't Only Think , click & Make Dream it Happen_</h4>
       <a href="book.html" class="btn">book now</a>
    </div>
 </section>
@@ -257,7 +258,7 @@
          </div>
 
       </div>
-         <p>&copy;MR.YRG</p>
+         <p>&copy;LST_Travel</p>
    </section>
 
    <!-- footer section ends -->
