--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo" style="background-image: url('https://www.shutterstock.com/image-photo/luxury-travel-vacation-destination-panoramic-banner-1115696396');">__LST_Travel__</a>
+      <a href="index.html" class="logo"><h2>LST_Travel</h2></a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
@@ -145,7 +145,7 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 
 <section class="home-packages">
 
-   <h1 class="heading-title"> Don't Think , BOOK NOW... </h1>
+   <h1 class="heading-title"> Don't Only Think , click & Make Dream it Happen </h1>
 
    <div class="box-container">
 
@@ -184,7 +184,7 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 
    </div>
 
-   <div class="load-more"> <a href="index.html" class="btn">__HOME__</a> </div>
+   <div class="load-more"> <a href="index.html" class="btn">HOME</a> </div>
 
 </section>
 
@@ -194,8 +194,8 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 
 <section class="home-offer">
    <div class="content">
-      <h2>upto 20% off</h2>
-      <h4>_Don't Only Think , click & Make Dream it Happen_</h4>
+      <h1>upto 20% off</h1>
+      <p> Don't Only Think , BOOK NOW...</p>
       <a href="book.html" class="btn">book now</a>
    </div>
 </section>
