--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo"><h2>LST_Travel</h2></a>
+      <a href="index.html" class="logo"><h2 img src="https://www.freepik.com/premium-vector/realistic-travel-background_3765748.htm#query=travel%20logo&position=16&from_view=keyword&track=ais" alt="logo">LST_Travel</h2></a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
@@ -145,7 +145,7 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 
 <section class="home-packages">
 
-   <h1 class="heading-title"> Don't Only Think , click & Make Dream it Happen </h1>
+   <h4 class="heading-title"> Don't Only Think , click & Make Dream it Happen </h4>
 
    <div class="box-container">
 
