--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo"><h2 img src="https://www.freepik.com/premium-vector/realistic-travel-background_3765748.htm#query=travel%20logo&position=16&from_view=keyword&track=ais" alt="logo">LST_Travel</h2></a>
+      <a href="index.html" class="logo"><h1>LST_Travel</h1></a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
@@ -194,8 +194,8 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 
 <section class="home-offer">
    <div class="content">
-      <h1>upto 20% off</h1>
-      <p> Don't Only Think , BOOK NOW...</p>
+      <h3>upto 20% off</h3>
+      <h6> Don't Only Think , BOOK NOW...</h6>
       <a href="book.html" class="btn">book now</a>
    </div>
 </section>
