--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 
 <section class="home-packages">
 
-   <a class="heading-title">Don't Only Think , click & Make Dream it Happen</a>
+   <a class="heading-title">
+      <h4>Don't Only Think , click & Make Dream it Happen</h4>
+   </a>
 
    <div class="box-container">
 
@@ -194,8 +196,8 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 
 <section class="home-offer">
    <div class="content">
-      <h2>upto 20% off</h2>
-      <p><h5> Don't Only Think , BOOK NOW...</h5></p>
+      <h3>upto 20% off</h3>
+      <h5> Don't Only Think , BOOK NOW...</h5>
       <a href="book.html" class="btn">book now</a>
    </div>
 </section>
