--- a/index.html
+++ b/index.html
@@ -146,7 +146,8 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 <section class="home-packages">
 
    <a class="heading-title">
-      <h4>Don't Only Think , click & Make Dream it Happen</h4>
+      <h5><pre>Don't Only Think , 
+      click & Make Dream it Happen</pre></h5>
    </a>
 
    <div class="box-container">
