--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 
 <section class="home-offer">
    <div class="content">
-      <h2>upto 20% off</h2>
-      <h5>BOOK NOW...</h5>
+      <h3>upto 20% off</h>
+      <h6>BOOK NOW...</h6>
       <a href="book.html" class="btn">book now</a>
    </div>
 </section>
