--- a/book.html
+++ b/book.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Home</title>
+   <title>Book</title>
    <link rel="stylesheet" href="css/style.css">
    <!-- swiper css link  -->
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo">travel.</a>
+      <a href="index.html" class="logo">LST_Travel</a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
