--- a/package.html
+++ b/package.html
@@ -5,7 +5,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>_Home_</title>
+   <title>package</title>
    <link rel="stylesheet" href="css/style.css">
    <!-- swiper css link  -->
    <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo">travel.</a>
+      <a href="index.html" class="logo"><h2>LST_Travel<h2></a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
@@ -45,7 +45,7 @@
          </div>
        </div>
     </div>
-    <h1 class="heading-title">top destinations</h1>
+    <h1 class="heading-title">Top Destinations</h1>
 
    <div class="box-container">
 
@@ -54,136 +54,134 @@
             <img src="images/p-1.jpg" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>Mumbai</h3>
+            <p>“You can leave Mumbai, but it will never leave you.”</p>
+            <a href="book.html" class="btn">Book Now</a>
+         </div>
+      </div>
+
+      <div class="box">
+         <div class="image">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.istockphoto.com%2Fid%2F621897226%2Fphoto%2Fgoa-beach-and-beautiful-sky-india.jpg%3Fs%3D612x612%26w%3D0%26k%3D20%26c%3DqDkllEUm9UpsXtfPlELdknkHMlgyT-kptQy6vAYFsM8%3D&tbnid=rpnhjjPxkCrtzM&vet=12ahUKEwi-lOnihbH-AhWWg2MGHbITDRgQMygbegUIARCfAg..i&imgrefurl=https%3A%2F%2Fwww.istockphoto.com%2Fphoto%2Fgoa-beach-and-beautiful-sky-india-gm621897226-108732197&docid=rr7bDnaUdoB0pM&w=612&h=342&q=goa%20beatuy%20image&ved=2ahUKEwi-lOnihbH-AhWWg2MGHbITDRgQMygbegUIARCfAg" alt="">
+         </div>
+         <div class="content">
+            <h3>Goa</h3>
+            <p>"Goa - where every day is a beach day."</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/p-2.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fletkupwaraspeak.files.wordpress.com%2F2021%2F01%2F256392.jpg%3Fw%3D1568&tbnid=LwfocUTHhTgHiM&vet=12ahUKEwjX_Nq2hrH-AhW7gGMGHaUPAa8QMygPegUIARCGAg..i&imgrefurl=https%3A%2F%2Fletkupwaraspeak.wordpress.com%2F2021%2F01%2F05%2Fkashmir-a-land-of-unimaginable-beauty%2F&docid=C0_HWdKtn9KAaM&w=1568&h=882&q=kashmir%20beatuy%20image&ved=2ahUKEwjX_Nq2hrH-AhW7gGMGHaUPAa8QMygPegUIARCGAg" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>Kashmir</h3>
+            <p>"Heaven isn't too far if Kashmir is your destination."</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/p-3.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.istockphoto.com%2Fid%2F1223612773%2Fphoto%2Fthe-kalka-to-shimla-railway-is-a-2-ft-6-in-narrow-gauge-railway-in-north-india-which.jpg%3Fs%3D612x612%26w%3D0%26k%3D20%26c%3DvYxFBTbvcLcivcYjtFB-S_P7ETUwgIj0mAk84l9uC1g%3D&tbnid=Ua4KpZjY54UlVM&vet=12ahUKEwjv1PfZhrH-AhUM_zgGHai1CXUQMygJegUIARDlAQ..i&imgrefurl=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fshimla&docid=IGPb8-I1wNnYfM&w=612&h=408&q=shimla%20beatuy%20image&ved=2ahUKEwjv1PfZhrH-AhUM_zgGHai1CXUQMygJegUIARDlAQ" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>Shimla</h3>
+            <p>"In Shimla, we discovered the beauty of nature and the richness of history."</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/p-4.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=http%3A%2F%2Fwww.birdsholiday.com%2Fmedia%2Fpackages%2F3545fd41cc2946941d4cdb9c6165d5d4.jpg&tbnid=3lXNhM4RdgyqzM&vet=12ahUKEwjd7pyfh7H-AhUL_TgGHQKfDHsQMygFegUIARDaAQ..i&imgrefurl=http%3A%2F%2Fwww.birdsholiday.com%2Fholiday-detail%2Fbeautiful-darjeeling-tour&docid=80YKl5Db2XCxeM&w=1800&h=700&q=darjeeling%20beatuy%20image&ved=2ahUKEwjd7pyfh7H-AhUL_TgGHQKfDHsQMygFegUIARDaAQ" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>Darjeeling</h3>
+            <p>The beauty of Darjeeling can't be described in words.</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/p-5.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fassets.traveltriangle.com%2Fblog%2Fwp-content%2Fuploads%2F2019%2F11%2FCoonoor_5th-Nov.jpg&tbnid=EXO8CQOYYWjOiM&vet=12ahUKEwip7tDnh7H-AhVO0jgGHRLwDwsQMygGegUIARDHAQ..i&imgrefurl=https%3A%2F%2Ftraveltriangle.com%2Fblog%2Fplaces-to-visit-near-ooty%2F&docid=ZcYWBonAJN7f3M&w=700&h=400&q=ooty%20beauty%20images&hl=en&ved=2ahUKEwip7tDnh7H-AhVO0jgGHRLwDwsQMygGegUIARDHAQ" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>ooty</h3>
+            <p>Take only Memories , left only footprint</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/p-6.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.tripexperienceblog.com%2Fwp-content%2Fuploads%2F2018%2F02%2Fshillong.jpg&tbnid=O8PjStZjvmCxiM&vet=12ahUKEwj98fnAiLH-AhVAimMGHQxRBx8QMygHegUIARDdAQ..i&imgrefurl=https%3A%2F%2Fwww.tripexperienceblog.com%2Fplaces-to-visit%2Fbest-time-to-visit-shillong%2F&docid=ev53MVG0RP4ZhM&w=1920&h=1080&q=Shillong%20beauty%20images&hl=en&ved=2ahUKEwj98fnAiLH-AhVAimMGHQxRBx8QMygHegUIARDdAQ" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>Shillong</h3>
+            <p>“Adventures are the best way to learn.” ...p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/g-3.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fmedia.istockphoto.com%2Fid%2F1135820309%2Fphoto%2Famber-fort-and-maota-lake-jaipur-rajasthan-india.jpg%3Fs%3D612x612%26w%3D0%26k%3D20%26c%3DraUKDB1Mris9Z7SjvuuTieZRzF2-CaKukGvTC8t1kuo%3D&tbnid=KAXsxUu6f8XxvM&vet=12ahUKEwi62qr9iLH-AhXKyaACHc8PAS4QMygGegUIARDqAQ..i&imgrefurl=https%3A%2F%2Fwww.istockphoto.com%2Fphotos%2Fjaipur&docid=iv0Xiz9cKk6JZM&w=612&h=476&q=Jaipurbeauty%20images&hl=en&ved=2ahUKEwi62qr9iLH-AhXKyaACHc8PAS4QMygGegUIARDqAQ" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>Jaipur</h3>
+            <p>“Jaipur is the finest jewelry ever created on earth, where king was the jeweler and bricks his gems.”</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/g-4.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fblog.railyatri.in%2Fwp-content%2Fuploads%2F2017%2F01%2FTourist-attractions-of-Pin-Valley.png&tbnid=P--sZRPvqFgpPM&vet=12ahUKEwiMwrC1ibH-AhX1pGMGHZ4QAaMQMygJegUIARDOAQ..i&imgrefurl=https%3A%2F%2Fblog.railyatri.in%2Funexplored-beauty-of-pin-valley-in-spiti%2F&docid=dHAYqj95u-PpQM&w=800&h=400&q=Spiti%20Valley%20beauty%20images&hl=en&ved=2ahUKEwiMwrC1ibH-AhX1pGMGHZ4QAaMQMygJegUIARDOAQ" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>Spiti Valley</h3>
+            <p>Land of Lamas, Land of Mysteries, Land of Adventures.</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/g-5.jpg" alt="">
+            <img src="ihttps://www.google.com/imgres?imgurl=https%3A%2F%2Fadventuresome.in%2Fwp-content%2Fuploads%2F2019%2F08%2Flakshadweep-islands-2.jpg&tbnid=DWdbAm_gl06vyM&vet=12ahUKEwjBhsygirH-AhXz9jgGHQeRDl4QMygAegUIARDUAQ..i&imgrefurl=https%3A%2F%2Fadventuresome.in%2Flakshadweep-islands%2F&docid=nKHnXnDiqKmitM&w=1000&h=667&q=Lakshadweep%20beauty%20images&hl=en&ved=2ahUKEwjBhsygirH-AhXz9jgGHQeRDl4QMygAegUIARDUAQ" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>Lakshadweep</h3>
+            <p>“Life is a beach!”</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/g-6.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.holidify.com%2Fimages%2FbgImages%2FDELHI.jpg&tbnid=e9Q7I1yJYHR9CM&vet=12ahUKEwiapcnpirH-AhWSyaACHUcxB6sQMygNegUIARDnAQ..i&imgrefurl=https%3A%2F%2Fwww.holidify.com%2Fplaces%2Fdelhi%2F&docid=5g0eW6NQ7tW00M&w=1023&h=681&q=new%20delhi%20travel%20images&hl=en&ved=2ahUKEwiapcnpirH-AhWSyaACHUcxB6sQMygNegUIARDnAQ" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>New Delhi</h3>
+            <p>Delhi, my heart belongs to you</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
       <div class="box">
          <div class="image">
-            <img src="images/g-7.jpg" alt="">
+            <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.holidify.com%2Fimages%2FbgImages%2FPONDICHERRY.jpg&tbnid=MsLnoKR2_ceN0M&vet=12ahUKEwjs65u7i7H-AhVAyKACHQtDAmAQMygSegUIARCEAg..i&imgrefurl=https%3A%2F%2Fwww.holidify.com%2Fplaces%2Fpondicherry%2F&docid=D8N83MuWbdrUUM&w=1200&h=664&q=ponduchhery%20travel%20images&hl=en&ved=2ahUKEwjs65u7i7H-AhVAyKACHQtDAmAQMygSegUIARCEAg" alt="">
          </div>
          <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
-            <a href="book.html" class="btn">book now</a>
-         </div>
-      </div>
-
-      <div class="box">
-         <div class="image">
-            <img src="images/g-8.jpg" alt="">
-         </div>
-         <div class="content">
-            <h3>adventure & tour</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, perspiciatis!</p>
+            <h3>pondicherry</h3>
+            <p>“Travel is my therapy.” ...</p>
             <a href="book.html" class="btn">book now</a>
          </div>
       </div>
 
    </div>
-
-   <div class="load-more"><span class="btn">load more</span></div>
 
 </section>
 
@@ -230,28 +228,20 @@
        </div>
 
        <div class="box">
-          <h3>extra links</h3>
-          <a href="#"> <i class="fas fa-angle-right"></i> ask questions</a>
-          <a href="#"> <i class="fas fa-angle-right"></i> about us</a>
-          <a href="#"> <i class="fas fa-angle-right"></i> privacy policy</a>
-          <a href="#"> <i class="fas fa-angle-right"></i> terms of use</a>
+          <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fcdn-prod.medicalnewstoday.com%2Fcontent%2Fimages%2Farticles%2F325%2F325466%2Fman-walking-dog.jpg&tbnid=r5CavR1d3332DM&vet=12ahUKEwjfxqL9g7H-AhVP_zgGHTf7BGUQMygWegUIARCSAg..i&imgrefurl=https%3A%2F%2Fwww.medicalnewstoday.com%2Farticles%2F325466&docid=kTscBPJzXBAiXM&w=1100&h=734&q=nature%20image&ved=2ahUKEwjfxqL9g7H-AhVP_zgGHTf7BGUQMygWegUIARCSAg" alt="nature" width="200" height="300">
        </div>
 
        <div class="box">
           <h3>contact info</h3>
-          <a href="#"> <i class="fas fa-phone"></i> +91 8256485937</a>
-          <a href="#"> <i class="fas fa-envelope"></i> tourGuide@gmail.com </a>
-          <a href="#"> <i class="fas fa-map"></i> indore, india - 400104 </a>
+          <a href="#"> <i class="fas fa-phone"></i> +91 9109828778</a>
+          <a href="#"> <i class="fas fa-envelope"></i> shreyanshnishod@gmail.com </a>
+          <a href="#"> <i class="fas fa-map"></i> indore, india - 452001 </a>
        </div>
-
+       
        <div class="box">
-          <h3>follow us</h3>
-          <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-          <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-          <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-          <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
+          <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fstatic.toiimg.com%2Fthumb%2Fmsid-92233948%2Cwidth-1070%2Cheight-580%2Cresizemode-75%2F92233948%2Cpt-32%2Cy_pad-40%2F92233948.jpg&tbnid=F47PgKG5Kf9RSM&vet=10CBgQMyhzahcKEwio9Jr9g7H-AhUAAAAAHQAAAAAQAw..i&imgrefurl=https%3A%2F%2Ftimesofindia.indiatimes.com%2Ftravel%2Fthings-to-do%2Findias-most-unique-nature-experiences%2Fphotostory%2F92233695.cms&docid=Zbgt_trms_8gXM&w=1070&h=579&q=nature%20image&ved=0CBgQMyhzahcKEwio9Jr9g7H-AhUAAAAAHQAAAAAQAw" alt="nature" width="200" height="300">
        </div>
-
+      
     </div>
 
     <p>&copy;MR.YRG</p>
