--- a/book.html
+++ b/book.html
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo">LST_Travel</a>
+      <a href="index.html" class="logo"><h2>LST_Travel</h2></a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
