--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 <body>
    <!-- header scetion starts -->
    <section class="header">
-      <a href="index.html" class="logo" style="background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fieltsonlinetests.com%2Fwriting-tips%2Fielts-writing-task-2-analysis-reasons-travelling-band-75&psig=AOvVaw3MoWqrU0mZw0jwzb44NGSe&ust=1681759721452000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCJCGq6eRr_4CFQAAAAAdAAAAABAJ');">__LST_Travel__.</a>
+      <a href="index.html" class="logo");"><h2>LST_Travel</h2></a>
       <nav class="navbar">
          <a href="index.html">home</a>
          <a href="about.html">about</a>
@@ -53,16 +53,16 @@
  
     <div class="content">
        <h3>why choose us?</h3>
-       <p>Nurtured from the seed of a single idea ‘to empower the traveller with easy & instant travel bookings providing comprehensive choices’, LST_Travel is a pioneer in India’s online travel space. Founded by Shreyansh Nishod in the year 2021, LST_Travel began its journey by serving the US-India travel market with best-value products & services, powered by robust technology and round-the-clock customer support.
-After successfully consolidating its position as a customer-first brand, known for its reliability and transparency, LST_Travel launched its India operations in 2022.
-</p>
-       <p>As low-cost Travelling carriers were introduced in India, the number of Indians opting for online travel solutions also increased rapidly. And LST_Travel answered the call of the hour, by bringing the convenience of booking hotels, and holiday packages in just a few clicks.
-Over the years, we have partnered with many leading brands from the aviation & hospitality industries, creating fruitful partner relations for business expansion opportunities.
-What makes our story even stronger is , Dedication  </p>
+        <pre>Honest prices – we have the best prices for tours, and a huge selection of destinations will not leave indifferent even avid tourist.
+          Reliable partners – We work with the best tour operators who over the years have proven their professionalism.
+          Full Service – Everything that a tourist may need when going abroad, in addition to the ticket.
+          Quality Guarantee – We do not have to worry about paperwork necessary documents.
+          Full support – contacting us, you get full support, from choosing the tour and ending with advice on what to take with you on a trip.
+          Document processing – With us you won’t have to worry about processing the necessary documents. </pre>
        <div class="icons-container">
           <div class="icons">
              <i class="fas fa-map"></i>
-             <span>top destinations</span>
+             <span>Top Destinations</span>
           </div>
           <div class="icons">
              <i class="fas fa-hand-holding-usd"></i>
@@ -177,13 +177,7 @@ What makes our story even stronger is , Dedication  </p>
           <a href="book.html"> <i class="fas fa-angle-right"></i> book</a>
        </div>
 
-       <div class="box">
-          <h3>extra links</h3>
-          <a href="#"> <i class="fas fa-angle-right"></i> ask questions</a>
-          <a href="#"> <i class="fas fa-angle-right"></i> about us</a>
-          <a href="#"> <i class="fas fa-angle-right"></i> privacy policy</a>
-          <a href="#"> <i class="fas fa-angle-right"></i> terms of use</a>
-       </div>
+      
 
        <div class="box">
           <h3>contact info</h3>
@@ -192,17 +186,10 @@ What makes our story even stronger is , Dedication  </p>
           <a href="#"> <i class="fas fa-map"></i> indore, india - 452001 </a>
        </div>
 
-       <div class="box">
-          <h3>follow us</h3>
-          <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-          <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-          <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-          <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
-       </div>
 
     </div>
 
-    <p>&copy;MR.YRG</p>
+    <p>&copy;LST_Travel</p>
  </section>
 
  <!-- footer section ends -->
