--- a/about.html
+++ b/about.html
@@ -53,12 +53,12 @@
  
     <div class="content">
        <h3>why choose us?</h3>
-        <pre>Honest prices – we have the best prices for tours, and a huge selection of destinations will not leave indifferent even avid tourist.
+        <pre><h4>Honest prices – we have the best prices for tours, and a huge selection of destinations will not leave indifferent even avid tourist.
           Reliable partners – We work with the best tour operators who over the years have proven their professionalism.
           Full Service – Everything that a tourist may need when going abroad, in addition to the ticket.
           Quality Guarantee – We do not have to worry about paperwork necessary documents.
           Full support – contacting us, you get full support, from choosing the tour and ending with advice on what to take with you on a trip.
-          Document processing – With us you won’t have to worry about processing the necessary documents. </pre>
+          Document processing – With us you won’t have to worry about processing the necessary documents. </h4></pre>
        <div class="icons-container">
           <div class="icons">
              <i class="fas fa-map"></i>
