--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
 <section class="home-offer">
    <div class="content">
       <h3>upto 20% off</h>
-      <h6>BOOK NOW...</h6>
+      <h4>BOOK NOW...</h4>
       <a href="book.html" class="btn">book now</a>
    </div>
 </section>
@@ -235,29 +235,13 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
             <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
             <a href="package.html"> <i class="fas fa-angle-right"></i> package</a>
             <a href="book.html"> <i class="fas fa-angle-right"></i> book</a>
-         </div>
-
-         <div class="box">
-            <h3>extra links</h3>
-            <a href="#"> <i class="fas fa-angle-right"></i> ask questions</a>
-            <a href="#"> <i class="fas fa-angle-right"></i> about us</a>
-            <a href="#"> <i class="fas fa-angle-right"></i> privacy policy</a>
-            <a href="#"> <i class="fas fa-angle-right"></i> terms of use</a>
-         </div>
+         </div
 
          <div class="box">
             <h3>contact info</h3>
-            <a href="#"> <i class="fas fa-phone"></i> +91 8256485937</a>
-            <a href="#"> <i class="fas fa-envelope"></i> tourGuide@gmail.com </a>
-            <a href="#"> <i class="fas fa-map"></i> indore, india - 400104 </a>
-         </div>
-
-         <div class="box">
-            <h3>follow us</h3>
-            <a href="#"> <i class="fab fa-facebook-f"></i> facebook </a>
-            <a href="#"> <i class="fab fa-twitter"></i> twitter </a>
-            <a href="#"> <i class="fab fa-instagram"></i> instagram </a>
-            <a href="#"> <i class="fab fa-linkedin"></i> linkedin </a>
+            <a href="#"> <i class="fas fa-phone"></i> +91 9109828778</a>
+            <a href="#"> <i class="fas fa-envelope"></i> shreyanshnishod8@gmail.com </a>
+            <a href="#"> <i class="fas fa-map"></i> indore, india - 452001 </a>
          </div>
 
       </div>
