--- a/index.html
+++ b/index.html
@@ -235,8 +235,7 @@ As Low-Cost Travelling Carriers Were Introduced In India, The Number Of Indians 
             <a href="about.html"> <i class="fas fa-angle-right"></i> about</a>
             <a href="package.html"> <i class="fas fa-angle-right"></i> package</a>
             <a href="book.html"> <i class="fas fa-angle-right"></i> book</a>
-         </div
-
+         </div>
          <div class="box">
             <h3>contact info</h3>
             <a href="#"> <i class="fas fa-phone"></i> +91 9109828778</a>
